v3/crates/graphql/schema/tests/snapshots/graphql_schema__tests__roled_schemas_have_some_permissions.snap
---
source: crates/graphql/schema/src/lib.rs
expression: "make_sdl_from_metadata_file_for_role(PathBuf::from(\"tests/metadata_with_select_permissions.json\").as_ref(),\n    &Role(\"role_with_some_permissions\".to_string()))"
---
schema {
  query: Query 
}

type Author {
  author_id: Int!
  first_name: String!
}

scalar Boolean

scalar Float

scalar ID

scalar Int

type Query {
  AuthorByID(author_id: Int!): Author
}

scalar String
