v3/crates/graphql/schema/tests/snapshots/graphql_schema__tests__roled_schemas_have_some_presets.snap
---
source: crates/graphql/schema/src/lib.rs
expression: "make_sdl_from_metadata_file_for_role(PathBuf::from(\"tests/metadata_with_presets.json\").as_ref(),\n    &Role(\"role_with_presets\".to_string()))"
---
schema {
  query: Query 
}

scalar Boolean

scalar Float

scalar ID

scalar Int

type Query {
  getActorsByMovieIdBounds(upper_bound: Int!): [CommandActor]
}

scalar String
